# lib_sys

./: CMakeLists.txt  test.c
include/: lib_sys.c  lib_sys.h
src/: cpu.c  lib_sys.c  mem.c
src/procfs/: procfs.c  procfs.h
test/: CMakeLists.txt  test.c
